css/style.css
/* ... */
div.etiqueta_seleccionada {
	border-color: red;
}

#seccion_fotos .marco_small {
	line-height: 20px;
}

#seccion_fotos #opciones {
	background-image: url("../css/iconos4.png");
	background-position: -102px -6px;
	height: 12px;
	width: 12px;
	float: right;
	cursor: pointer;
}

#seccion_fotos #opciones .marco_small {
	display: none;
	left: -60px;
	position: relative;
	top: 20px;
	z-index: 99999999;
	text-align: center;
}

#seccion_fotos #opciones .marco_small button span {
	width: 90px;
}

/* Comentarios */

.foto_comentario {
	padding: 10px 0;
	border-bottom: 1px solid #E5E5E5;
}
.foto_comentario > img {
	max-width: 50px;
	max-height: 50px;
	vertical-align: top;
	margin-right: 5px;
}

.foto_comentario > div {
	display: inline-block;
	max-width: 900px;
}

.foto_come_titu {
	display: inline-block;
}

.foto_come_titu > a {
	color: #36679F;
	font-size: 14px;
	vertical-align: top;
}

.foto_come_fecha {
	vertical-align: top;
	display: inline-block;
	font-size: 10px;
	font-weight: normal !important;
	margin-left: 20px;
}

.foto_come_men {
	font-size: 13px;
}

/*******************	MENSAJES PRIVADOS	********/
#mps_separador {
	border-top: 1px solid #E5E5E5;
	margin-bottom: 10px;
}

#seccion_mp_enviar #receptor_icon {
	max-width: 30px;
	max-height: 30px;
	vertical-align: middle;
}
#seccion_mp_enviar textarea[name='mensaje'] {
	min-height: 60px;
	min-width: 650px;
	max-width: 650px;
}

#seccion_mp_recibidos .mensaje {
	margin: 10px 0;
	padding: 5px 0;
	border-bottom: 1px solid #E5E5E5;
}

#seccion_mp_recibidos .mensaje.nuevo .encabezado {
	font-weight: bold;
}

#seccion_mp_recibidos .mensaje .encabezado {
	cursor: pointer;
	display: inline-block;
}

#seccion_mp_recibidos .mensaje .encabezado img {
	max-width: 50px;
	max-height: 50px;
	vertical-align: top;
	margin-right: 5px;
}

#seccion_mp_recibidos .mensaje .encabezado div.img {
	display: inline-block;
	vertical-align: top;
}

#seccion_mp_recibidos .mensaje .encabezado .datos {
	display: inline-block;
}

#seccion_mp_recibidos .mensaje .encabezado .datos div {
	display: inline-block;
	margin: 3px;
}
#seccion_mp_recibidos .mensaje .encabezado .datos .fecha {
	font-size: 10px;
	font-style: italic;
}

#seccion_mp_recibidos .mensaje .cuerpo {
	display: none;
	margin: 10px;
}
#seccion_mp_recibidos .mensaje form {
	margin: 10px;
}
#seccion_mp_recibidos .mensaje textarea {
	max-width: 630px;
	min-height: 59px;
	min-width: 630px;
}

#seccion_mp_enviados .mensaje {
	margin: 10px 0;
	padding: 5px 0;
	border-bottom: 1px solid #E5E5E5;
}

#seccion_mp_enviados .mensaje .encabezado {
	cursor: pointer;
	display: inline-block;
}

#seccion_mp_enviados .mensaje .encabezado img {
	max-width: 50px;
	max-height: 50px;
	vertical-align: top;
	margin-right: 5px;
}

#seccion_mp_enviados .mensaje .encabezado div.img {
	display: inline-block;
	vertical-align: top;
}

#seccion_mp_enviados .mensaje .encabezado .datos {
	display: inline-block;
}

#seccion_mp_enviados .mensaje .encabezado .datos div {
	display: inline-block;
	margin: 3px;
}
#seccion_mp_enviados .mensaje .encabezado .datos .fecha {
	font-size: 10px;
	font-style: italic;
}

#seccion_mp_enviados .mensaje .texto {
	display: none;
	margin: 10px;
}

/*******************	GENTE	****************/
#seccion_gente #resultados {
}

#seccion_gente .resultado {
	outline: 1px solid #E5E5E5;
	margin: 15px 0;
	padding: 10px;
}

#seccion_gente .resultado .img {
	display: inline-block;
}

#seccion_gente .resultado img {
	max-height: 150px;
	max-width: 200px;
}

#seccion_gente .resultado .datos {
	display: inline-block;
	vertical-align: top;
}

#seccion_gente .resultado0 .nombre {
	color: black;
}

#seccion_gente .resultado .info {
	color: black;
}

#seccion_gente .resultado .right {
	float: right;
	text-align: right;
}

#seccion_gente .resultado .peticion_enviar {
	cursor: pointer;
}

#seccion_gente form input[type="text"] {
	width: 230px;
}

#seccion_gente form select[name="provincia"] {
	width: 155px;
}

#seccion_gente form div.input span {

}

/*******************	AJUSTES		****************/
.lista_enlaces ul {
	list-style: none outside none;
	margin: 0;
	padding: 0;
}

.lista_enlaces ul li {

}

.lista_enlaces ul li:hover {
	background-color: #3869A0;
}

.lista_enlaces ul li a {
	font-size: 15px;
	text-decoration: none;
	display: block;
	padding: 5px;
}

.lista_enlaces ul li a:hover {
	color: white;
}

/*******************	AJUSTES -> PETICIONES	********/
.peticion_amistad {
	margin: 10px 0;
	padding: 5px 0;
	border-bottom: 1px solid #E5E5E5;
	display: inline-block;
}
.peticion_amistad > .encabezado {
	display: inline-block;
}
.peticion_amistad > div, .peticion_amistad > .encabezado img {
	display: inline;
}

.peticion_amistad > img {
	max-width: 50px;
	max-height: 50px;
	vertical-align: top;
	margin-right: 5px;
	float: left;
}
.peticion_amistad > .nombre {
}

.peticion_amistad > .fecha {
	font-size: 10px;
	font-weight: normal !important;
	margin-left: 20px;
}
.peticion_amistad > .acciones {
}
.peticion_amistad > .acciones > div {
	display: inline;
	font-size: 13px;
	margin-left: 20px;
	cursor: pointer;
}

/*******************	CHAT	*****************/
#chat #encabezado {
	display: inline-block;
	margin-bottom: 10px;
}

#chat #encabezado h2 {
	display: inline-block;
	width: 147px;
}

#chat #encabezado #desactivar {
	display: inline-block;
	background: url("iconos3.png") no-repeat scroll -85px -434px /473px 1085px transparent;
	cursor: pointer;
	height: 23px;
	margin-left: 5px;
	vertical-align: middle;
	width: 22px;
}

#chat_anclaje {
	bottom: 0;
	position: fixed;
	height: 55px;
}

#chat_boton {
	background-color: white;
	background-image: url("../css/chat.png");
	background-repeat: no-repeat;
	background-size: 50px 50px;
	border-radius: 10px 10px 10px 10px;
	bottom: 0;
	box-shadow: 1px 1px 3px black;
	cursor: pointer;
	display: inline-block;
	float: left;
	height: 50px;
	margin-right: 10px;
	vertical-align: bottom;
	width: 50px;
}
/* ... */

